# rosin_rover_simulation

rover_bringup/: CMakeLists.txt  (+1 more)
rover_description/: CMakeLists.txt  package.xml
rover_description/launch/: rvizrover15.launch
rover_description/urdf/: em_rover.xacro  flag.urdf  model.config  model.sdf
rover_description/urdf/sensors/: SICK_laser.urdf.xacro  hokuyo.urdf.xacro  imu.urdf.xacro  openni_camera.urdf.xacro
rover_gazebo/: CMakeLists.txt  DEPENDENCIES  package.xml
rover_gazebo/launch/: ackermann_cmd_wrapper.launch  rover_simulation.launch  spawn_rover.launch
rover_gazebo/models/mascor_city_street_junction/: model.config  model.sdf
rover_gazebo/models/mascor_city_street_left_turn/: model.config  model.sdf
rover_gazebo/models/mascor_city_street_right_turn/: model.config  model.sdf
rover_gazebo/models/mascor_city_street_roadblock/: model.config  model.sdf
rover_gazebo/models/mascor_city_street_straight/: model.config  model.sdf
rover_gazebo/models/mascor_city_street_t_junction/: model.config
rover_gazebo/models/mascor_city_street_turn_smooth/: model.config  model.sdf
rover_gazebo/models/maskor_city/: MascorCity_Trafficlight_Body.dae  MascorCity_Trafficlight_Lights.dae  MascorCity_Trafficlight_Lights_GREEN.dae  MascorCity_Trafficlight_Lights_RED.dae  MascorCity_Trafficlight_Lights_YELLOW.dae  MascorCity_Trafficlight_Stand.dae  MascorCity_street_roadblock_blocks.dae  mascorCity_MascorHQ.dae  mascorCity_Street_Left_Turn.dae
rover_gazebo/models/mc_trafficlight/: model.config  model.sdf
rover_gazebo/models/papptown_wall/: model.config  model.sdf
rover_gazebo/models/small_mascor_city_sign_ar_tag/: model.sdf
rover_gazebo/models/small_mascor_city_street_junction/: model.config  model.sdf
rover_gazebo/models/small_mascor_city_street_straight/: model.config  model.sdf
rover_gazebo/models/small_mascor_city_street_t_junction/: model.config  model.sdf
rover_gazebo/models/small_mascor_city_street_turn/: model.config  model.sdf
rover_gazebo/scripts/: respawn_rover.sh
rover_gazebo/src/: ackermann_cmd_wrapper.cpp
rover_gazebo/worlds/: ROS_SummerSchool_2017.world  empty.world  gasstation.world  test_7.world
rover_gazebo/worlds/others/: gasstation_with_tags.world  maskor_PappenheimRing_SS16.world  mc_ROS_SS15.world  mc_ROS_SS17boardmap.world  mc_ROS_SS17largemap.world
(+66 files in other folders)
