<?xml version="1.0"?>
<package>
  <name>rover_gazebo</name>
  <version>0.0.0</version>
  <description>The rover_gazebo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="ros@todo.todo">ros</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>hector_gazebo</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>  
  <run_depend>ackermann_msgs</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>hector_gazebo</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>ackermann_msgs</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>gazebo_ros_control</run_depend>

  <export>

    <gazebo_ros gazebo_model_path="${prefix}/models" />

  </export>
</package>
